<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_gravity="fill_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="0.45" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/usernameTextEdit_LoginActivity"
        android:selectAllOnFocus="true"
        android:lines="1"
        android:hint="Username"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal"
        android:layout_margin="10dp">
    </EditText>

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextEdit_LoginActivity"
        android:selectAllOnFocus="true"
        android:lines="1"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal"
        android:layout_margin="10dp">
    </EditText>

    <CheckBox
        android:text="Remember me"
        android:id="@+id/RememberMe"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_margin="10dp">
    </CheckBox>

    <Button
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="Log In"
        android:background="@color/Main_Theme"
        android:id="@+id/login_LoginActivity"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_margin="10dp">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="Register"
        android:id="@+id/Register"
        android:background="@color/Main_Theme"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_margin="10dp">
    </Button>

</LinearLayout>
