<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill_horizontal"
    android:orientation="vertical">


<ListView
    android:id="@+id/taskListView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
    android:layout_above="@+id/myScheduleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_weight="10"
    android:theme="@style/Widget.AppCompat.ListView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/myScheduleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/Main_Theme"
            android:layout_alignTop="@+id/SettingButton"
            android:layout_weight="1"
            android:text="My Schedule"
            android:typeface="normal" />

        <Button
            android:id="@+id/partnerScheduleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/Main_Theme"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/SettingButton"
            android:layout_weight="1"
            android:text="(S)He Schedule" />

    </LinearLayout>

</LinearLayout>
