<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_item_new"
        android:title="New Task"
        android:icon="@drawable/glyphicons_432_plus"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_item_save"
        android:title="Save Task"
        android:icon="@drawable/glyphicons_443_floppy_disk"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_item_delete"
        android:title="Delete Task"
        android:icon="@drawable/glyphicons_016_bin"
        app:showAsAction="always">
    </item>

    <item android:id="@+id/menu_item_settings"
        android:title="Binding"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
