<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:id="@+id/tv_task_pre_act_content"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_below="@id/tv_task_pre_act_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_task_pre_act_content"
        android:gravity="center_horizontal"
        android:hint="Undefined"
        />



</RelativeLayout>
