...
    <string name="intent_extra_new_or_edit">NewOrEdit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_base_action_bar">BaseActionBarActivity</string>
    <string name="title_activity_my_location">MyLocationActivity</string>
    <string name="content">Content</string>
    <string name="find_a_partner">Find A Partner!</string>
    <string name="invite_from">You Received An Binding Invitation from</string>
    <string name="cancel_from">You Received An Binding Cancellation from</string>
    <string name="enter_partner_name_that_you_want_to_bind">Please enter his/her username!</string>
    <string name="bt_find_partner">FIND</string>
    <string name="confirm">CONFIRM</string>
...
